# EverAnimate

./: .gitignore  LICENSE  README.md  pyproject.toml  test.sh  train_stage1.sh  train_stage2.sh  train_stage3.sh
diffsynth/: __init__.py
diffsynth/configs/: model_configs.py  vram_management_module_maps.py
diffsynth/core/data/: operators.py  unified_dataset.py
diffsynth/core/loader/: config.py  file.py
diffsynth/diffusion/: base_pipeline.py  flow_match.py  loss.py  runner.py
diffsynth/models/: wan_video_animate_adapter.py  wan_video_dit.py
diffsynth/pipelines/: wan_video_svi.py  wan_video_svi_pro.py
diffsynth/utils/: visualize_video_tensor.py
examples/wanvideo/model_training/: train_svi.py
scripts/: accelerate_config_14B.yaml  download_models.sh  everanimate_inference.py  everanimate_train.py
