[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "everanimate"
version = "2.0.0"
description = "Minute-scale human animation via latent flow restoration"
authors = [{name = "VITA lab at EPFL"}]
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "torchvision",
    "transformers",
    "huggingface_hub",
    "imageio",
    "imageio[ffmpeg]",
    "safetensors",
    "einops",
    "numpy",
    "Pillow",
    "tqdm",
    "opencv-python",
    "librosa",
    "sentencepiece",
    "protobuf",
    "modelscope",
    "ftfy",
    "pandas",
    "accelerate",
    "peft",
    "datasets",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]

[tool.setuptools]
include-package-data = true
